# C-_3D_2D_Project

./: .gitignore  CMakeLists.txt  CMakePresets.json  packages.txt
src/: main.cpp
src/Engine/: ImGuiGizmo.cpp  ImGuiGizmo.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLWidget.cpp  OpenGLWidget.hpp  SDL2Widget.cpp  SDL2Widget.hpp  SceneWidgetLinker.cpp  SceneWidgetLinker.hpp  ThreeDObjectSelector.cpp  ThreeDObjectSelector.hpp  ThreeDSceneDrawer.cpp  ThreeDSceneDrawer.hpp  ThreeDWorldView.hpp  ThreeDWorldview.cpp  TwoDComponent.cpp  TwoDComponent.hpp
src/InternalLogic/: AssemblerLogic.hpp
src/UI/: FirstWindow.cpp  FirstWindow.h  FirstWindow.ui  GUIWindow.hpp  GameView.ui  GameWindow.cpp  GameWindow.hpp  Gizmo.cpp  Gizmo.hpp  Gizmo.vert  GizmoShader.cpp  GizmoShader.hpp  MainSoftwareGUI.cpp  NewWindow.hpp  SimiliGizmo.cpp  SimiliGizmo.hpp  ThreeDWindow.cpp  ThreeDWindow.hpp
src/WorldObjects/: Camera.cpp  Camera.hpp  ThreeDObject.cpp  ThreeDObject.hpp
